commit bilingual contents

--- a/docs/visual-basic/misc/bc2015.md
+++ b/docs/visual-basic/misc/bc2015.md
@@ -1,5 +1,5 @@
 ---
-title: Il file '<filename>' non è un file di testo
+title: Il file '<filename>' non è un file di testo.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc2015
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC2015
 ms.assetid: 838cd00c-43ee-48d1-8a0d-5e1d5122ec9d
-ms.openlocfilehash: 662733f0a6cccb9897de6890c623749325dfb5ae
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a92a018b532673ed398ebf8f1e2f8dbc202a6407
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658651"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367075"
 ---
-# <a name="the-file-filename-is-not-a-text-file"></a><span data-ttu-id="974a1-102">Il file '\<nomefile >' non è un file di testo</span><span class="sxs-lookup"><span data-stu-id="974a1-102">The file '\<filename>' is not a text file</span></span>
-<span data-ttu-id="974a1-103">Il file specificato non può essere scritto perché è un file binario.</span><span class="sxs-lookup"><span data-stu-id="974a1-103">The specified file cannot be written to because it is a binary file.</span></span>  
+# <a name="the-file-filename-is-not-a-text-file"></a><span data-ttu-id="3f8f5-102">Il file '\<filename>' non è un file di testo.</span><span class="sxs-lookup"><span data-stu-id="3f8f5-102">The file '\<filename>' is not a text file</span></span>
+<span data-ttu-id="3f8f5-103">Il file specificato non può essere scritto perché è un file binario.</span><span class="sxs-lookup"><span data-stu-id="3f8f5-103">The specified file cannot be written to because it is a binary file.</span></span>  
   
- <span data-ttu-id="974a1-104">**ID errore:** BC2015</span><span class="sxs-lookup"><span data-stu-id="974a1-104">**Error ID:** BC2015</span></span>  
+ <span data-ttu-id="3f8f5-104">**ID errore:** BC2015</span><span class="sxs-lookup"><span data-stu-id="3f8f5-104">**Error ID:** BC2015</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="974a1-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="974a1-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3f8f5-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3f8f5-105">To correct this error</span></span>  
   
-- <span data-ttu-id="974a1-106">Verificare che il nome file e il percorso forniti siano corretti.</span><span class="sxs-lookup"><span data-stu-id="974a1-106">Check that you are supplying the correct file name and path.</span></span>  
+- <span data-ttu-id="3f8f5-106">Verificare che il nome file e il percorso forniti siano corretti.</span><span class="sxs-lookup"><span data-stu-id="3f8f5-106">Check that you are supplying the correct file name and path.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="974a1-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="974a1-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="3f8f5-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3f8f5-107">See also</span></span>
 
-- [<span data-ttu-id="974a1-108">Scrittura su file</span><span class="sxs-lookup"><span data-stu-id="974a1-108">Writing to Files</span></span>](../../visual-basic/developing-apps/programming/drives-directories-files/writing-to-files.md)
-- [<span data-ttu-id="974a1-109">Procedura: Analizzare percorsi di file</span><span class="sxs-lookup"><span data-stu-id="974a1-109">How to: Parse File Paths</span></span>](../../visual-basic/developing-apps/programming/drives-directories-files/how-to-parse-file-paths.md)
-- [<span data-ttu-id="974a1-110">My.Computer.FileSystem.WriteAllText</span><span class="sxs-lookup"><span data-stu-id="974a1-110">My.Computer.FileSystem.WriteAllText</span></span>](xref:Microsoft.VisualBasic.FileIO.FileSystem.WriteAllText%2A)
-- [<span data-ttu-id="974a1-111">My.Computer.FileSystem.WriteAllBytes</span><span class="sxs-lookup"><span data-stu-id="974a1-111">My.Computer.FileSystem.WriteAllBytes</span></span>](xref:Microsoft.VisualBasic.MyServices.FileSystemProxy.WriteAllBytes%2A)
+- [<span data-ttu-id="3f8f5-108">Scrittura in file</span><span class="sxs-lookup"><span data-stu-id="3f8f5-108">Writing to Files</span></span>](../developing-apps/programming/drives-directories-files/writing-to-files.md)
+- [<span data-ttu-id="3f8f5-109">Procedura: Analizzare percorsi di file</span><span class="sxs-lookup"><span data-stu-id="3f8f5-109">How to: Parse File Paths</span></span>](../developing-apps/programming/drives-directories-files/how-to-parse-file-paths.md)
+- [<span data-ttu-id="3f8f5-110">My. computer. FileSystem. WriteAllText</span><span class="sxs-lookup"><span data-stu-id="3f8f5-110">My.Computer.FileSystem.WriteAllText</span></span>](xref:Microsoft.VisualBasic.FileIO.FileSystem.WriteAllText%2A)
+- [<span data-ttu-id="3f8f5-111">My. computer. FileSystem. WriteAllBytes</span><span class="sxs-lookup"><span data-stu-id="3f8f5-111">My.Computer.FileSystem.WriteAllBytes</span></span>](xref:Microsoft.VisualBasic.MyServices.FileSystemProxy.WriteAllBytes%2A)
