--- a/docs/visual-basic/misc/bc30563.md
+++ b/docs/visual-basic/misc/bc30563.md
@@ -1,5 +1,5 @@
 ---
-title: "'<name>'è ambiguo negli oggetti applicazione'<list>'"
+title: "' <name> ' è ambiguo negli oggetti applicazione '<list>'"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30563
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30563
 ms.assetid: 965c1570-6297-47b5-b41e-e2dd68b034f0
-ms.openlocfilehash: 0b07ab4a0b27c2eb1ef17ba72b2d7ceaa90b7a3e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6c26b18d27f21c61b745b899f83322e6b861945b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620569"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390097"
 ---
-# <a name="name-is-ambiguous-in-the-application-objects-list"></a><span data-ttu-id="93349-103">«\<nome >' è ambiguo negli oggetti applicazione\<elenco >»</span><span class="sxs-lookup"><span data-stu-id="93349-103">'\<name>' is ambiguous in the application objects '\<list>'</span></span>
-<span data-ttu-id="93349-104">È stato specificato un nome che è ambiguo ed è quindi in conflitto con un altro nome.</span><span class="sxs-lookup"><span data-stu-id="93349-104">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="93349-105">Il compilatore Visual Basic non dispone di regole di risoluzione dei conflitti. è necessario evitare ambiguità tra nomi manualmente.</span><span class="sxs-lookup"><span data-stu-id="93349-105">The Visual Basic compiler does not have any conflict resolution rules; you must disambiguate names yourself.</span></span> <span data-ttu-id="93349-106">L'elenco fornito nei dettagli del messaggio di errore indica gli oggetti dell'applicazione in cui il nome è ambiguo.</span><span class="sxs-lookup"><span data-stu-id="93349-106">The list provided in the error message details the application objects where the name is ambiguous.</span></span>  
+# <a name="name-is-ambiguous-in-the-application-objects-list"></a><span data-ttu-id="795ae-103">' \<name> ' è ambiguo negli oggetti applicazione ' \<list> '</span><span class="sxs-lookup"><span data-stu-id="795ae-103">'\<name>' is ambiguous in the application objects '\<list>'</span></span>
+<span data-ttu-id="795ae-104">È stato specificato un nome che è ambiguo ed è quindi in conflitto con un altro nome.</span><span class="sxs-lookup"><span data-stu-id="795ae-104">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="795ae-105">Il compilatore Visual Basic non dispone di alcuna regola di risoluzione dei conflitti; è necessario evitare di ambiguare i nomi.</span><span class="sxs-lookup"><span data-stu-id="795ae-105">The Visual Basic compiler does not have any conflict resolution rules; you must disambiguate names yourself.</span></span> <span data-ttu-id="795ae-106">L'elenco fornito nei dettagli del messaggio di errore indica gli oggetti dell'applicazione in cui il nome è ambiguo.</span><span class="sxs-lookup"><span data-stu-id="795ae-106">The list provided in the error message details the application objects where the name is ambiguous.</span></span>  
   
- <span data-ttu-id="93349-107">**ID errore:** BC30563</span><span class="sxs-lookup"><span data-stu-id="93349-107">**Error ID:** BC30563</span></span>  
+ <span data-ttu-id="795ae-107">**ID errore:** BC30563</span><span class="sxs-lookup"><span data-stu-id="795ae-107">**Error ID:** BC30563</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="93349-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="93349-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="795ae-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="795ae-108">To correct this error</span></span>  
   
-- <span data-ttu-id="93349-109">Specificare un nome completo.</span><span class="sxs-lookup"><span data-stu-id="93349-109">Fully qualify the name.</span></span>  
+- <span data-ttu-id="795ae-109">Specificare un nome completo.</span><span class="sxs-lookup"><span data-stu-id="795ae-109">Fully qualify the name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="93349-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="93349-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="795ae-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="795ae-110">See also</span></span>
 
-- [<span data-ttu-id="93349-111">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="93349-111">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
+- [<span data-ttu-id="795ae-111">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="795ae-111">Namespace Statement</span></span>](../language-reference/statements/namespace-statement.md)
