--- a/docs/visual-basic/misc/bc32097.md
+++ b/docs/visual-basic/misc/bc32097.md
@@ -1,5 +1,5 @@
 ---
-title: Operando 'IsNot' del tipo '<typeparametername>' è possibile confrontare solo con 'Nothing' perché '<typeparametername>' è un parametro di tipo senza vincoli di classe
+title: È possibile confrontare l'operando 'IsNot' del tipo '<typeparametername>' solo a 'Nothing' perché '<typeparametername>' è un parametro di tipo senza vincoli di classe
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32097
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC32097
 ms.assetid: 50283a4b-70e3-4e59-9b9b-65e7cacf5ce1
-ms.openlocfilehash: 04ac3872d8ded8420495beda67d85f2f657ab2dc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0110745b421d8b410e8705c4d01b2ca64ce52adc
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618534"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365255"
 ---
-# <a name="isnot-operand-of-type-typeparametername-can-be-compared-only-to-nothing-because-typeparametername-is-a-type-parameter-with-no-class-constraint"></a><span data-ttu-id="5b549-102">Operando 'IsNot' del tipo '\<nomeparametrotipo >' è possibile confrontare solo con 'Nothing' perché '\<nomeparametrotipo >' è un parametro di tipo senza vincoli di classe</span><span class="sxs-lookup"><span data-stu-id="5b549-102">'IsNot' operand of type '\<typeparametername>' can be compared only to 'Nothing' because '\<typeparametername>' is a type parameter with no class constraint</span></span>
-<span data-ttu-id="5b549-103">Un parametro di tipo viene usato come operando per [IsNot Operator](../../visual-basic/language-reference/operators/isnot-operator.md) quando il parametro di tipo viene definito senza la parola chiave [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) o un nome della classe specifico nell'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="5b549-103">A type parameter is used as an operand for the [IsNot Operator](../../visual-basic/language-reference/operators/isnot-operator.md) when the type parameter is defined without either the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) keyword or a specific class name in its constraint list.</span></span>  
+# <a name="isnot-operand-of-type-typeparametername-can-be-compared-only-to-nothing-because-typeparametername-is-a-type-parameter-with-no-class-constraint"></a><span data-ttu-id="d6a1e-102">È possibile confrontare l'operando 'IsNot' del tipo '\<typeparametername>' solo a 'Nothing' perché '\<typeparametername>' è un parametro di tipo senza vincoli di classe</span><span class="sxs-lookup"><span data-stu-id="d6a1e-102">'IsNot' operand of type '\<typeparametername>' can be compared only to 'Nothing' because '\<typeparametername>' is a type parameter with no class constraint</span></span>
+<span data-ttu-id="d6a1e-103">Un parametro di tipo viene usato come operando per [IsNot Operator](../language-reference/operators/isnot-operator.md) quando il parametro di tipo viene definito senza la parola chiave [Class (Visual Basic)](../language-reference/statements/class-statement.md) o un nome della classe specifico nell'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="d6a1e-103">A type parameter is used as an operand for the [IsNot Operator](../language-reference/operators/isnot-operator.md) when the type parameter is defined without either the [Class (Visual Basic)](../language-reference/statements/class-statement.md) keyword or a specific class name in its constraint list.</span></span>  
   
- <span data-ttu-id="5b549-104">`IsNot` confronta due tipi riferimento per determinare se puntano a istanze di oggetti diversi in memoria.</span><span class="sxs-lookup"><span data-stu-id="5b549-104">`IsNot` compares two reference types to determine whether they point to different object instances in memory.</span></span> <span data-ttu-id="5b549-105">Non può accettare un operando che non è un tipo riferimento, a meno che l'altro operando [Nothing](../../visual-basic/language-reference/nothing.md).</span><span class="sxs-lookup"><span data-stu-id="5b549-105">It cannot take an operand that is not a reference type unless the other operand is [Nothing](../../visual-basic/language-reference/nothing.md).</span></span>  
+ <span data-ttu-id="d6a1e-104">`IsNot` confronta due tipi riferimento per determinare se puntano a istanze di oggetti diversi in memoria.</span><span class="sxs-lookup"><span data-stu-id="d6a1e-104">`IsNot` compares two reference types to determine whether they point to different object instances in memory.</span></span> <span data-ttu-id="d6a1e-105">Non può assumere un operando che non è un tipo di riferimento, a meno che l'altro operando non sia [null](../language-reference/nothing.md).</span><span class="sxs-lookup"><span data-stu-id="d6a1e-105">It cannot take an operand that is not a reference type unless the other operand is [Nothing](../language-reference/nothing.md).</span></span>  
   
- <span data-ttu-id="5b549-106">**ID errore:** BC32097</span><span class="sxs-lookup"><span data-stu-id="5b549-106">**Error ID:** BC32097</span></span>  
+ <span data-ttu-id="d6a1e-106">**ID errore:** BC32097</span><span class="sxs-lookup"><span data-stu-id="d6a1e-106">**Error ID:** BC32097</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5b549-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5b549-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d6a1e-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d6a1e-107">To correct this error</span></span>  
   
-- <span data-ttu-id="5b549-108">Se è possibile richiedere che l'argomento di tipo fornito a questo parametro di tipo sia sempre un tipo riferimento, aggiungere la parola chiave `Class` o un nome della classe specifico all'elenco di vincoli per il parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="5b549-108">If you can require that the type argument supplied to this type parameter always be a reference type, add either the `Class` keyword or a specific class name to the constraint list for the type parameter.</span></span>  
+- <span data-ttu-id="d6a1e-108">Se è possibile richiedere che l'argomento di tipo fornito a questo parametro di tipo sia sempre un tipo riferimento, aggiungere la parola chiave `Class` o un nome della classe specifico all'elenco di vincoli per il parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="d6a1e-108">If you can require that the type argument supplied to this type parameter always be a reference type, add either the `Class` keyword or a specific class name to the constraint list for the type parameter.</span></span>  
   
-- <span data-ttu-id="5b549-109">Se non è possibile richiedere che l'argomento di tipo fornito a questo parametro di tipo sia sempre un tipo riferimento, rimuoverlo dall'espressione `IsNot` .</span><span class="sxs-lookup"><span data-stu-id="5b549-109">If you cannot require that the type argument supplied to this type parameter always be a reference type, remove it from the `IsNot` expression.</span></span> <span data-ttu-id="5b549-110">Non è possibile confrontarlo con altri tipi riferimento con l'operatore `IsNot` .</span><span class="sxs-lookup"><span data-stu-id="5b549-110">You cannot compare it to other reference types with the `IsNot` operator.</span></span>  
+- <span data-ttu-id="d6a1e-109">Se non è possibile richiedere che l'argomento di tipo fornito a questo parametro di tipo sia sempre un tipo riferimento, rimuoverlo dall'espressione `IsNot` .</span><span class="sxs-lookup"><span data-stu-id="d6a1e-109">If you cannot require that the type argument supplied to this type parameter always be a reference type, remove it from the `IsNot` expression.</span></span> <span data-ttu-id="d6a1e-110">Non è possibile confrontarlo con altri tipi riferimento con l'operatore `IsNot` .</span><span class="sxs-lookup"><span data-stu-id="d6a1e-110">You cannot compare it to other reference types with the `IsNot` operator.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5b549-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5b549-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d6a1e-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d6a1e-111">See also</span></span>
 
-- [<span data-ttu-id="5b549-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="5b549-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="5b549-113">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="5b549-113">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="5b549-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="5b549-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
-- [<span data-ttu-id="5b549-115">Operatori di confronto in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="5b549-115">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [<span data-ttu-id="d6a1e-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="d6a1e-112">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="d6a1e-113">Type List</span><span class="sxs-lookup"><span data-stu-id="d6a1e-113">Type List</span></span>](../language-reference/statements/type-list.md)
+- [<span data-ttu-id="d6a1e-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="d6a1e-114">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="d6a1e-115">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="d6a1e-115">Comparison Operators in Visual Basic</span></span>](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
