--- a/docs/visual-basic/misc/bc36907.md
+++ b/docs/visual-basic/misc/bc36907.md
@@ -1,5 +1,5 @@
 ---
-title: Metodo di estensione '<methodname>'definito '<modulename>' non è generico (o ha parametri di tipo gratuito) e quindi non può avere argomenti tipo
+title: Il metodo di estensione '<methodname>' definito in '<modulename>' non è generico o non ha parametri di tipo disponibili e quindi non può avere argomenti di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - bc36907
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36907
 ms.assetid: 45191e93-89d1-48ec-99a5-ff9661a2a6ee
-ms.openlocfilehash: 3ac8cd04a4b38829b9ff7a77c76384e1a880e57e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ad9364a354b2afadc17282e6418d7141c57f7380
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64614451"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369389"
 ---
-# <a name="extension-method-methodname-defined-in-modulename-is-not-generic-or-has-no-free-type-parameters-and-so-cannot-have-type-arguments"></a><span data-ttu-id="c5204-102">Metodo di estensione '\<NomeMetodo >' definito in '\<NomeModulo >' non generico (o ha parametri di tipo gratuito) e quindi non può avere argomenti tipo</span><span class="sxs-lookup"><span data-stu-id="c5204-102">Extension method '\<methodname>' defined in '\<modulename>' is not generic (or has no free type parameters) and so cannot have type arguments</span></span>
-<span data-ttu-id="c5204-103">È stato specificato un argomento di tipo in una chiamata a un metodo di estensione che è privo di parametri generici o non ha parametri generici per cui è non è già specificato un tipo.</span><span class="sxs-lookup"><span data-stu-id="c5204-103">A type argument has been specified in a call to an extension method that either has no generic parameters or has no generic parameters for which a type is not already specified.</span></span> <span data-ttu-id="c5204-104">Il codice seguente, ad esempio, causa questo errore.</span><span class="sxs-lookup"><span data-stu-id="c5204-104">For example, the following code causes this error.</span></span>  
+# <a name="extension-method-methodname-defined-in-modulename-is-not-generic-or-has-no-free-type-parameters-and-so-cannot-have-type-arguments"></a><span data-ttu-id="76ec9-102">Il metodo di estensione '\<methodname>' definito in '\<modulename>' non è generico o non ha parametri di tipo disponibili e quindi non può avere argomenti di tipo</span><span class="sxs-lookup"><span data-stu-id="76ec9-102">Extension method '\<methodname>' defined in '\<modulename>' is not generic (or has no free type parameters) and so cannot have type arguments</span></span>
+<span data-ttu-id="76ec9-103">È stato specificato un argomento di tipo in una chiamata a un metodo di estensione che è privo di parametri generici o non ha parametri generici per cui è non è già specificato un tipo.</span><span class="sxs-lookup"><span data-stu-id="76ec9-103">A type argument has been specified in a call to an extension method that either has no generic parameters or has no generic parameters for which a type is not already specified.</span></span> <span data-ttu-id="76ec9-104">Il codice seguente, ad esempio, causa questo errore.</span><span class="sxs-lookup"><span data-stu-id="76ec9-104">For example, the following code causes this error.</span></span>  
   
 ```vb  
 ' The extension method is not generic.  
@@ -32,15 +32,15 @@ Dim str = "hi"
 'str.Example(Of String)()  
 ```  
   
- <span data-ttu-id="c5204-105">**ID errore:** BC36907</span><span class="sxs-lookup"><span data-stu-id="c5204-105">**Error ID:** BC36907</span></span>  
+ <span data-ttu-id="76ec9-105">**ID errore:** BC36907</span><span class="sxs-lookup"><span data-stu-id="76ec9-105">**Error ID:** BC36907</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c5204-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c5204-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="76ec9-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="76ec9-106">To correct this error</span></span>  
   
-- <span data-ttu-id="c5204-107">Aggiungere un parametro di tipo per la definizione di metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="c5204-107">Add a type parameter to the extension method definition.</span></span>  
+- <span data-ttu-id="76ec9-107">Aggiungere un parametro di tipo per la definizione di metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="76ec9-107">Add a type parameter to the extension method definition.</span></span>  
   
-- <span data-ttu-id="c5204-108">Rimuovere l'argomento di tipo in eccesso dalla chiamata di routine.</span><span class="sxs-lookup"><span data-stu-id="c5204-108">Remove the extra type argument from the procedure call.</span></span>  
+- <span data-ttu-id="76ec9-108">Rimuovere l'argomento di tipo in eccesso dalla chiamata di routine.</span><span class="sxs-lookup"><span data-stu-id="76ec9-108">Remove the extra type argument from the procedure call.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c5204-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c5204-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="76ec9-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="76ec9-109">See also</span></span>
 
-- [<span data-ttu-id="c5204-110">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="c5204-110">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="c5204-111">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="c5204-111">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="76ec9-110">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="76ec9-110">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="76ec9-111">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="76ec9-111">Generic Procedures in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-procedures.md)
