--- a/docs/visual-basic/misc/bc30579.md
+++ b/docs/visual-basic/misc/bc30579.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30579
 ms.assetid: 8d658008-eddc-4b7d-a8d4-036da42957bf
-ms.openlocfilehash: 913959b981c820c6f9fa181a0b813e6112abcebc
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 8f2e1f7d54ce239ed8f56644c8d7c01138cd02ba
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667245"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370154"
 ---
-# <a name="externalsource-statement-must-end-with-a-matching-end-externalsource"></a><span data-ttu-id="389b3-102">L'istruzione '#ExternalSource' deve terminare con un '#End ExternalSource' corrispondente</span><span class="sxs-lookup"><span data-stu-id="389b3-102">'#ExternalSource' statement must end with a matching '#End ExternalSource'</span></span>
-<span data-ttu-id="389b3-103">La direttiva `#ExternalSource` fa riferimento al codice esterno, permettendo al compilatore di segnalare con precisione le eccezioni che si verificano all'interno di tale codice.</span><span class="sxs-lookup"><span data-stu-id="389b3-103">The `#ExternalSource` directive references outside code, enabling the compiler to accurately report when exceptions occur within that code.</span></span> <span data-ttu-id="389b3-104">Un blocco `#ExternalSource` deve iniziare con `#ExternalSource` e terminare con `#End ExternalSource`.</span><span class="sxs-lookup"><span data-stu-id="389b3-104">An `#ExternalSource` block must begin with `#ExternalSource` and end with `#End ExternalSource`.</span></span>  
+# <a name="externalsource-statement-must-end-with-a-matching-end-externalsource"></a><span data-ttu-id="93c28-102">L'istruzione '#ExternalSource' deve terminare con un '#End ExternalSource' corrispondente</span><span class="sxs-lookup"><span data-stu-id="93c28-102">'#ExternalSource' statement must end with a matching '#End ExternalSource'</span></span>
+<span data-ttu-id="93c28-103">La direttiva `#ExternalSource` fa riferimento al codice esterno, permettendo al compilatore di segnalare con precisione le eccezioni che si verificano all'interno di tale codice.</span><span class="sxs-lookup"><span data-stu-id="93c28-103">The `#ExternalSource` directive references outside code, enabling the compiler to accurately report when exceptions occur within that code.</span></span> <span data-ttu-id="93c28-104">Un blocco `#ExternalSource` deve iniziare con `#ExternalSource` e terminare con `#End ExternalSource`.</span><span class="sxs-lookup"><span data-stu-id="93c28-104">An `#ExternalSource` block must begin with `#ExternalSource` and end with `#End ExternalSource`.</span></span>  
   
- <span data-ttu-id="389b3-105">**ID errore:** BC30579</span><span class="sxs-lookup"><span data-stu-id="389b3-105">**Error ID:** BC30579</span></span>  
+ <span data-ttu-id="93c28-105">**ID errore:** BC30579</span><span class="sxs-lookup"><span data-stu-id="93c28-105">**Error ID:** BC30579</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="389b3-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="389b3-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="93c28-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="93c28-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="389b3-107">Aggiungere `#End ExternalSource` nella posizione appropriata nel codice.</span><span class="sxs-lookup"><span data-stu-id="389b3-107">Add `#End ExternalSource` to the appropriate location in your code.</span></span>  
+1. <span data-ttu-id="93c28-107">Aggiungere `#End ExternalSource` nella posizione appropriata nel codice.</span><span class="sxs-lookup"><span data-stu-id="93c28-107">Add `#End ExternalSource` to the appropriate location in your code.</span></span>  
   
-2. <span data-ttu-id="389b3-108">Rimuovere l'elemento `#ExternalSource` iniziale se non è necessario.</span><span class="sxs-lookup"><span data-stu-id="389b3-108">Remove the initial `#ExternalSource` if it is unnecessary.</span></span>  
+2. <span data-ttu-id="93c28-108">Rimuovere l'elemento `#ExternalSource` iniziale se non è necessario.</span><span class="sxs-lookup"><span data-stu-id="93c28-108">Remove the initial `#ExternalSource` if it is unnecessary.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="389b3-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="389b3-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="93c28-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="93c28-109">See also</span></span>
 
-- [<span data-ttu-id="389b3-110">Direttiva #ExternalSource</span><span class="sxs-lookup"><span data-stu-id="389b3-110">#ExternalSource Directive</span></span>](../../visual-basic/language-reference/directives/externalsource-directive.md)
-- [<span data-ttu-id="389b3-111">Compilazione condizionale in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="389b3-111">Conditional compilation in Visual Basic</span></span>](../programming-guide/program-structure/conditional-compilation.md)
+- [<span data-ttu-id="93c28-110">#ExternalSource (direttiva)</span><span class="sxs-lookup"><span data-stu-id="93c28-110">#ExternalSource Directive</span></span>](../language-reference/directives/externalsource-directive.md)
+- [<span data-ttu-id="93c28-111">Compilazione condizionale in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="93c28-111">Conditional compilation in Visual Basic</span></span>](../programming-guide/program-structure/conditional-compilation.md)
