--- a/docs/visual-basic/misc/bc30791.md
+++ b/docs/visual-basic/misc/bc30791.md
@@ -1,5 +1,5 @@
 ---
-title: "'Declare' istruzioni in una struttura non possono essere dichiarate come '<specifier>'"
+title: Le istruzioni ' Declare ' in una struttura non possono essere dichiarate ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30791
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30791
 ms.assetid: 714d8088-c885-40ce-ab4c-fde296fe23ec
-ms.openlocfilehash: 17a46dcc90ba1bff229921b81f3b81fe0292655a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2bd9d3e3f933b2cfe51e6c033fc13ad9424f0bcd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64589592"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389371"
 ---
-# <a name="declare-statements-in-a-structure-cannot-be-declared-specifier"></a><span data-ttu-id="d0f01-102">'Declare' istruzioni in una struttura non possono essere dichiarate come '\<identificatore >'</span><span class="sxs-lookup"><span data-stu-id="d0f01-102">'Declare' statements in a structure cannot be declared '\<specifier>'</span></span>
-<span data-ttu-id="d0f01-103">Una dichiarazione `Declare` contiene un identificatore che non è valido all'interno di una dichiarazione `Structure` .</span><span class="sxs-lookup"><span data-stu-id="d0f01-103">A `Declare` declaration has a specifier that is not valid within a `Structure` declaration.</span></span>  
+# <a name="declare-statements-in-a-structure-cannot-be-declared-specifier"></a><span data-ttu-id="b3706-102">Le istruzioni ' Declare ' in una struttura non possono essere dichiarate ' \<specifier> '</span><span class="sxs-lookup"><span data-stu-id="b3706-102">'Declare' statements in a structure cannot be declared '\<specifier>'</span></span>
+<span data-ttu-id="b3706-103">Una dichiarazione `Declare` contiene un identificatore che non è valido all'interno di una dichiarazione `Structure` .</span><span class="sxs-lookup"><span data-stu-id="b3706-103">A `Declare` declaration has a specifier that is not valid within a `Structure` declaration.</span></span>  
   
- <span data-ttu-id="d0f01-104">**ID errore:** BC30791</span><span class="sxs-lookup"><span data-stu-id="d0f01-104">**Error ID:** BC30791</span></span>  
+ <span data-ttu-id="b3706-104">**ID errore:** BC30791</span><span class="sxs-lookup"><span data-stu-id="b3706-104">**Error ID:** BC30791</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d0f01-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d0f01-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b3706-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b3706-105">To correct this error</span></span>  
   
-- <span data-ttu-id="d0f01-106">Rimuovere l'identificatore.</span><span class="sxs-lookup"><span data-stu-id="d0f01-106">Remove the specifier.</span></span>  
+- <span data-ttu-id="b3706-106">Rimuovere l'identificatore.</span><span class="sxs-lookup"><span data-stu-id="b3706-106">Remove the specifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d0f01-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d0f01-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b3706-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b3706-107">See also</span></span>
 
-- [<span data-ttu-id="d0f01-108">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="d0f01-108">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [<span data-ttu-id="d0f01-109">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="d0f01-109">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="b3706-108">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="b3706-108">Delegate Statement</span></span>](../language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="b3706-109">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="b3706-109">Structure Statement</span></span>](../language-reference/statements/structure-statement.md)
