--- a/docs/visual-basic/misc/bc31516.md
+++ b/docs/visual-basic/misc/bc31516.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typename>' non può essere usato come attributo perché non è dichiarato 'Public'
+title: Il tipo '<typename>' non può essere usato come attributo perché non è dichiarato come 'Public'
 ms.date: 07/20/2015
 f1_keywords:
 - bc31516
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31516
 ms.assetid: ec659779-c850-48b5-a585-68ea84cff536
-ms.openlocfilehash: d5f60711c8641cf8876fccb5feb9fc697fac5a0e
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 3da0680a29e30356ab4e4d645217cff870b020f1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61789155"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365943"
 ---
-# <a name="type-typename-cannot-be-used-as-an-attribute-because-it-is-not-declared-public"></a><span data-ttu-id="9614e-102">Tipo '\<nomeTipo >' non può essere usato come attributo perché non è dichiarato 'Public'</span><span class="sxs-lookup"><span data-stu-id="9614e-102">Type '\<typename>' cannot be used as an attribute because it is not declared 'Public'</span></span>
-<span data-ttu-id="9614e-103">Gli attributi devono essere pubblici.</span><span class="sxs-lookup"><span data-stu-id="9614e-103">Attributes must be public.</span></span>  
+# <a name="type-typename-cannot-be-used-as-an-attribute-because-it-is-not-declared-public"></a><span data-ttu-id="fe14c-102">Il tipo '\<typename>' non può essere usato come attributo perché non è dichiarato come 'Public'</span><span class="sxs-lookup"><span data-stu-id="fe14c-102">Type '\<typename>' cannot be used as an attribute because it is not declared 'Public'</span></span>
+<span data-ttu-id="fe14c-103">Gli attributi devono essere pubblici.</span><span class="sxs-lookup"><span data-stu-id="fe14c-103">Attributes must be public.</span></span>  
   
- <span data-ttu-id="9614e-104">**ID errore:** BC31516</span><span class="sxs-lookup"><span data-stu-id="9614e-104">**Error ID:** BC31516</span></span>  
+ <span data-ttu-id="fe14c-104">**ID errore:** BC31516</span><span class="sxs-lookup"><span data-stu-id="fe14c-104">**Error ID:** BC31516</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9614e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9614e-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fe14c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fe14c-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="9614e-106">Aggiungere il modificatore `Public` alla classe Attribute.</span><span class="sxs-lookup"><span data-stu-id="9614e-106">Add the `Public` modifier to the attribute class.</span></span>  
+1. <span data-ttu-id="fe14c-106">Aggiungere il modificatore `Public` alla classe Attribute.</span><span class="sxs-lookup"><span data-stu-id="fe14c-106">Add the `Public` modifier to the attribute class.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9614e-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9614e-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="fe14c-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fe14c-107">See also</span></span>
 
-- [<span data-ttu-id="9614e-108">Public</span><span class="sxs-lookup"><span data-stu-id="9614e-108">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)
+- [<span data-ttu-id="fe14c-108">Pubblica</span><span class="sxs-lookup"><span data-stu-id="fe14c-108">Public</span></span>](../language-reference/modifiers/public.md)
