--- a/docs/visual-basic/misc/bc32080.md
+++ b/docs/visual-basic/misc/bc32080.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC32080
 ms.assetid: 88c62a1c-aee3-46b2-ad78-76790022c04c
-ms.openlocfilehash: 0d7ca52f718117f8c267a1f4bf55eb63729a1973
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 2bc7198b3581ef5d2f4c8ddbb525de71cfdce63a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667515"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365514"
 ---
-# <a name="generic-methods-cannot-use-handles-clause"></a><span data-ttu-id="624ba-102">I metodi generici non possono utilizzare la clausola 'Handles'</span><span class="sxs-lookup"><span data-stu-id="624ba-102">Generic methods cannot use 'Handles' clause</span></span>
-<span data-ttu-id="624ba-103">Una routine `Sub` generica comprende una clausola [Handles](../../visual-basic/language-reference/statements/handles-clause.md) nella sua dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="624ba-103">A generic `Sub` procedure includes a [Handles](../../visual-basic/language-reference/statements/handles-clause.md) clause in its declaration.</span></span>  
+# <a name="generic-methods-cannot-use-handles-clause"></a><span data-ttu-id="b0f34-102">I metodi generici non possono utilizzare la clausola 'Handles'</span><span class="sxs-lookup"><span data-stu-id="b0f34-102">Generic methods cannot use 'Handles' clause</span></span>
+<span data-ttu-id="b0f34-103">Una routine `Sub` generica comprende una clausola [Handles](../language-reference/statements/handles-clause.md) nella sua dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="b0f34-103">A generic `Sub` procedure includes a [Handles](../language-reference/statements/handles-clause.md) clause in its declaration.</span></span>  
   
- <span data-ttu-id="624ba-104">La clausola `Handles` specifica un elenco di eventi gestiti dalla routine `Sub` .</span><span class="sxs-lookup"><span data-stu-id="624ba-104">A `Handles` clause specifies a list of events that the `Sub` procedure handles.</span></span> <span data-ttu-id="624ba-105">Per poter fungere da gestore eventi, la routine `Sub` deve avere la stessa firma di ciascun evento che deve gestire.</span><span class="sxs-lookup"><span data-stu-id="624ba-105">To be an event handler, the `Sub` procedure must have the same signature as each event it is to handle.</span></span> <span data-ttu-id="624ba-106">Una routine generica può essere creata più di una volta, con firme che Visual Basic non è in grado di stimare in fase di compilazione.</span><span class="sxs-lookup"><span data-stu-id="624ba-106">A generic procedure can be created more than once, with signatures that Visual Basic cannot predict at compile time.</span></span> <span data-ttu-id="624ba-107">Pertanto, Visual Basic non è in grado di garantire la firma corrispondente a quelle degli `Handles` eventi nella clausola.</span><span class="sxs-lookup"><span data-stu-id="624ba-107">Therefore, Visual Basic cannot guarantee a signature that matches those of the events in the `Handles` clause.</span></span>  
+ <span data-ttu-id="b0f34-104">La clausola `Handles` specifica un elenco di eventi gestiti dalla routine `Sub` .</span><span class="sxs-lookup"><span data-stu-id="b0f34-104">A `Handles` clause specifies a list of events that the `Sub` procedure handles.</span></span> <span data-ttu-id="b0f34-105">Per poter fungere da gestore eventi, la routine `Sub` deve avere la stessa firma di ciascun evento che deve gestire.</span><span class="sxs-lookup"><span data-stu-id="b0f34-105">To be an event handler, the `Sub` procedure must have the same signature as each event it is to handle.</span></span> <span data-ttu-id="b0f34-106">Una routine generica può essere creata più di una volta, con firme che Visual Basic non è in grado di stimare in fase di compilazione.</span><span class="sxs-lookup"><span data-stu-id="b0f34-106">A generic procedure can be created more than once, with signatures that Visual Basic cannot predict at compile time.</span></span> <span data-ttu-id="b0f34-107">Pertanto, Visual Basic non è in grado di garantire la firma corrispondente a quelle degli eventi nella `Handles` clausola.</span><span class="sxs-lookup"><span data-stu-id="b0f34-107">Therefore, Visual Basic cannot guarantee a signature that matches those of the events in the `Handles` clause.</span></span>  
   
- <span data-ttu-id="624ba-108">**ID errore:** BC32080</span><span class="sxs-lookup"><span data-stu-id="624ba-108">**Error ID:** BC32080</span></span>  
+ <span data-ttu-id="b0f34-108">**ID errore:** BC32080</span><span class="sxs-lookup"><span data-stu-id="b0f34-108">**Error ID:** BC32080</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="624ba-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="624ba-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b0f34-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b0f34-109">To correct this error</span></span>  
   
-- <span data-ttu-id="624ba-110">Se la routine `Sub` deve essere generica, rimuovere la clausola `Handles` dalla sua dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="624ba-110">If the `Sub` procedure needs to be generic, remove the `Handles` clause from its declaration.</span></span> <span data-ttu-id="624ba-111">Usare l' [AddHandler Statement](../../visual-basic/language-reference/statements/addhandler-statement.md) per associare questo gestore eventi a un evento.</span><span class="sxs-lookup"><span data-stu-id="624ba-111">Use the [AddHandler Statement](../../visual-basic/language-reference/statements/addhandler-statement.md) to associate this event handler with an event.</span></span>  
+- <span data-ttu-id="b0f34-110">Se la routine `Sub` deve essere generica, rimuovere la clausola `Handles` dalla sua dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="b0f34-110">If the `Sub` procedure needs to be generic, remove the `Handles` clause from its declaration.</span></span> <span data-ttu-id="b0f34-111">Usare l' [AddHandler Statement](../language-reference/statements/addhandler-statement.md) per associare questo gestore eventi a un evento.</span><span class="sxs-lookup"><span data-stu-id="b0f34-111">Use the [AddHandler Statement](../language-reference/statements/addhandler-statement.md) to associate this event handler with an event.</span></span>  
   
-- <span data-ttu-id="624ba-112">Se la routine `Sub` deve usare la clausola `Handles` per associare gli eventi, rimuovere la clausola [Of](../../visual-basic/language-reference/statements/of-clause.md) dalla sua dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="624ba-112">If the `Sub` procedure needs to use the `Handles` clause to associate events, remove the [Of](../../visual-basic/language-reference/statements/of-clause.md) clause from its declaration.</span></span> <span data-ttu-id="624ba-113">Con `Handles`è necessario usare una routine non generica.</span><span class="sxs-lookup"><span data-stu-id="624ba-113">You must use a nongeneric procedure with `Handles`.</span></span>  
+- <span data-ttu-id="b0f34-112">Se la routine `Sub` deve usare la clausola `Handles` per associare gli eventi, rimuovere la clausola [Of](../language-reference/statements/of-clause.md) dalla sua dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="b0f34-112">If the `Sub` procedure needs to use the `Handles` clause to associate events, remove the [Of](../language-reference/statements/of-clause.md) clause from its declaration.</span></span> <span data-ttu-id="b0f34-113">Con `Handles`è necessario usare una routine non generica.</span><span class="sxs-lookup"><span data-stu-id="b0f34-113">You must use a nongeneric procedure with `Handles`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="624ba-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="624ba-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b0f34-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b0f34-114">See also</span></span>
 
-- [<span data-ttu-id="624ba-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="624ba-115">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="624ba-116">Eventi (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="624ba-116">Events (Visual Basic)</span></span>](../programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="b0f34-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b0f34-115">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="b0f34-116">Eventi (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="b0f34-116">Events (Visual Basic)</span></span>](../programming-guide/language-features/events/index.md)
